fix issues with initialization